Bug fixes for the article and category entities